force-app/main/default/objects/LiveChatTranscript/fields/Chat_Invite_Button_Name__c.field-meta.xml
<CustomField>
    <fullName>Chat_Invite_Button_Name__c</fullName>
    <label>Chat Invite/Button Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>