force-app/main/default/objects/LiveChatTranscript/fields/Pre_Chat_Email__c.field-meta.xml
<CustomField>
    <fullName>Pre_Chat_Email__c</fullName>
    <label>Pre-Chat Email</label>
    <type>Email</type>
</CustomField>