force-app/main/default/objects/LiveChatTranscript/fields/Pre_Chat_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Pre_Chat_First_Name__c</fullName>
    <label>Pre-Chat First Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>