force-app/main/default/objects/LiveChatTranscript/fields/Pre_Chat_Phone__c.field-meta.xml
<CustomField>
    <fullName>Pre_Chat_Phone__c</fullName>
    <label>Pre-Chat Phone</label>
    <type>Phone</type>
</CustomField>