force-app/main/default/objects/LiveChatTranscript/fields/Pre_Chat_Username__c.field-meta.xml
<CustomField>
    <fullName>Pre_Chat_Username__c</fullName>
    <label>Pre-Chat Username</label>
    <length>50</length>
    <type>Text</type>
</CustomField>