force-app/main/default/objects/LiveChatTranscript/listViews/Missed_Chats.listView-meta.xml
<ListView>
    <fullName>Missed_Chats</fullName>
    <columns>Name</columns>
    <columns>LiveChatVisitor</columns>
    <columns>StartTime</columns>
    <columns>EndTime</columns>
    <columns>Status</columns>
    <columns>RequestTime</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status</field>
        <operation>equals</operation>
        <value>0,2</value>
    </filters>
    <label>Missed or Dropped Chats</label>
</ListView>