force-app/main/default/objects/LiveChatTranscript/listViews/Support_Chat_LiveChatTranscript.listView-meta.xml
<ListView>
    <fullName>Support_Chat_LiveChatTranscript</fullName>
    <columns>Name</columns>
    <columns>LiveChatVisitor</columns>
    <columns>StartTime</columns>
    <columns>EndTime</columns>
    <columns>Status</columns>
    <columns>Account</columns>
    <columns>CreatedBy</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CreatedDate</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <label>Support Chat</label>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>