force-app/main/default/objects/LiveChatTranscript/listViews/Technical_Queue_LiveChatTranscript.listView-meta.xml
<ListView>
    <fullName>Technical_Queue_LiveChatTranscript</fullName>
    <filterScope>Queue</filterScope>
    <label>Technical Queue</label>
    <queue>Technical_Queue</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>